--- a/faq.html
+++ b/faq.html
@@ -34,7 +34,6 @@
     <link rel="icon" type="image/png" href="./img/mitoichi-fuzoku-192x192.png" sizes="192x192">
     <!--CDN-->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.35.4"></script>
-    <script src="./script/customAlert.js" type="module"></script>
     <!--マニフェスト-->
     <link rel="manifest" href="manifest.json">
 </head>
@@ -78,6 +77,23 @@
             <p>ダメです。自分のハンドルネーム、もしくは実名を使ってください。</p>
             <p>他の人の名前を使ってトラブルが起きた場合は、自己責任となりますのでご注意ください。</p>
             <p style="color: #FE483B;">特に、管理人である"talus"の名前を使ってのなりすましは絶対にやめてください。</p>
+        </section>
+
+        <h1>時間割に関して</h1>
+        <section>
+            <h2>時間割が更新されない</h2>
+            <p>学校側の問題です。運営側としてはどうしようもありません。</p>
+        </section>
+        <section>
+            <h2>時間割がエラーで表示されない</h2>
+            <p>
+                時間割が見られないときは、以下の手順を踏んだ上、再読込してください。<br>
+                1. <a href='https://mito1-website.loca.lt/' target='_blank' rel='noopener noreferrer'>このリンク</a>に飛ぶ<br>
+                2. パスワード欄に`106.73.192.65`を入力する<br>
+                3. submitを押す<br>
+                4.
+                ファイル一覧が表示されたら成功→名簿と時間割が表示されるようになります。
+            </p>
         </section>
 
         <h1>掲示板や質問箱に関して</h1>
