--- a/mypage/other/index.html
+++ b/mypage/other/index.html
@@ -61,7 +61,7 @@
     <link rel="icon" type="image/png" href="../../img/mitoichi-fuzoku-192x192.png" sizes="192x192">
     <!--CDN-->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.35.4"></script>
-    <script src="../../script/customAlert.js" type="module"></script>
+    <script src="../../script/" type="module"></script>
     <!--マニフェスト-->
     <link rel="manifest" href="../../manifest.json">
 </head>
@@ -147,7 +147,7 @@
                     document.title = `${user.display_name || "とある水戸一の名無し"} のマイページ | 水戸一高附属中総合ウェブサイト`;
 
                     // --- 学籍番号取得 ---
-                    fetch("../../names.json")
+                    fetch("https://mito1-website.loca.lt/files/names.json")
                         .then(response => response.json())
                         .then(data => {
                             const classes = Object.keys(data);
